Added controller and routes for project model, update Swagger docs
